adjust image paths -2

--- a/_posts/2021-03-03-edc-of-2021.markdown
+++ b/_posts/2021-03-03-edc-of-2021.markdown
@@ -27,9 +27,9 @@ when I am heading out for the day and plan to be out for an extended period of t
 
   <div class="gallery-box">
     <div class="gallery">
-      <img src="/images/cover33.jpg">
-      <img src="/images/cover34.jpg">
-      <img src="/images/cover33.jpg">
+      <img src="/images/covers/cover33.jpg">
+      <img src="/images/covers/cover34.jpg">
+      <img src="/images/covers/cover33.jpg">
     </div>
   </div>
 
@@ -48,8 +48,8 @@ when I am heading out for the day and plan to be out for an extended period of t
 
   <div class="gallery-box">
     <div class="gallery">
-      <img src="/images/cover33.jpg">
-      <img src="/images/cover33.jpg">
-      <img src="/images/cover33.jpg">
+      <img src="/images/covers/cover33.jpg">
+      <img src="/images/covers/cover33.jpg">
+      <img src="/images/covers/cover33.jpg">
     </div>
   </div>
